<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".question_1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ques_1_back"
            android:padding="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/temperature"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_1"
                android:textSize="30sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:padding="20dp">

            <Button
                android:id="@+id/op1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/question_1_button"
                android:text="@string/op_1"
                android:textColor="@color/ques_1"/>
            <Button
                android:id="@+id/op2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/question_1_button"
                android:layout_marginTop="30dp"
                android:text="@string/op_2"
                android:textColor="@color/ques_1"/>
            <Button
                android:id="@+id/op3"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/question_1_button"
                android:text="@string/op_3"
                android:textColor="@color/ques_1"/>
        </LinearLayout>

        <Button
            android:id="@+id/next_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NEXT"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/ques_1_selected"
            android:textColor="@color/white"/>


    </LinearLayout>



</ScrollView>