<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingLeft="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/corona_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/corona_virus"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/app_name"
            android:textSize="30sp"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="300dp">

            <LinearLayout
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/transparent_button"
                android:orientation="vertical"
                android:padding="40dp"
                android:onClick="coronaTest">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/test" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/card_1_text"
                    android:textColor="@color/green"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/transparent_button"
                android:orientation="vertical"
                android:padding="20dp"
                android:onClick="symptoms">

                <ImageView
                    android:id="@+id/symp_card_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/symptoms" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/card_2_text"
                    android:textColor="@color/green"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_button"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="precautions">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/precautions" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/card_3_text"
                    android:textColor="@color/green"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_button"
                android:orientation="vertical"
                android:padding="20dp"
                android:onClick="statistics"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/statistics" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/card_4_text"
                    android:textColor="@color/green"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_button"
                android:orientation="vertical"
                android:padding="20dp"
                android:onClick="remainder"
                android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/hand" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/handwash"
                    android:textColor="@color/green"
                    android:textSize="20sp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>